JPA 구성 기존 entity를 도메인폴더 만들어서 도메인객체로 사용 entity 폴더에 jpa랑 연동되는 jpaEntity 구성 MenuJpaEntity 구성 후 MenuMapper / MenuRepository 로 나눠서 간단한 crud만 jpa로 변경